[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://common/UI/CharacterSelect.gd" id="1"]

[node name="CharacterSelect" type="CanvasLayer"]
layer = 50
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
focus_mode = 1

[node name="Dim" type="ColorRect" parent="Root"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.65)

[node name="Center" type="CenterContainer" parent="Root"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="Root/Center"]
custom_minimum_size = Vector2(540, 0)

[node name="Margin" type="MarginContainer" parent="Root/Center/Panel"]
margin_left = 24.0
margin_top = 24.0
margin_right = 24.0
margin_bottom = 24.0

[node name="VBox" type="VBoxContainer" parent="Root/Center/Panel/Margin"]
custom_minimum_size = Vector2(480, 0)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoLabel" type="Label" parent="Root/Center/Panel/Margin/VBox"]
text = "Synchronising survivors..."
vertical_alignment = 1

[node name="RosterList" type="ItemList" parent="Root/Center/Panel/Margin/VBox"]
size_flags_vertical = 3
size_flags_horizontal = 3
select_mode = 0
allow_reselect = true

[node name="StatusLabel" type="Label" parent="Root/Center/Panel/Margin/VBox"]
text = "Loading survivors..."
modulate = Color(0.9, 0.9, 0.9, 1)

[node name="ActionRow" type="HBoxContainer" parent="Root/Center/Panel/Margin/VBox"]
size_flags_horizontal = 3
alignment = 1

[node name="PlayButton" type="Button" parent="Root/Center/Panel/Margin/VBox/ActionRow"]
text = "Play"
size_flags_horizontal = 1

[node name="DeleteButton" type="Button" parent="Root/Center/Panel/Margin/VBox/ActionRow"]
text = "Delete"
size_flags_horizontal = 1
disabled = true

[node name="CreateNewButton" type="Button" parent="Root/Center/Panel/Margin/VBox/ActionRow"]
text = "Create New"
size_flags_horizontal = 1

[node name="CancelButton" type="Button" parent="Root/Center/Panel/Margin/VBox/ActionRow"]
text = "Cancel"
size_flags_horizontal = 1

[connection signal="pressed" from="Root/Center/Panel/Margin/VBox/ActionRow/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Root/Center/Panel/Margin/VBox/ActionRow/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Root/Center/Panel/Margin/VBox/ActionRow/CreateNewButton" to="." method="_on_create_new_button_pressed"]
[connection signal="pressed" from="Root/Center/Panel/Margin/VBox/ActionRow/CancelButton" to="." method="_on_cancel_button_pressed"]
